@@ -12,6 +12,8 @@ given new feature.
   enum sensors_subfeature_type SENSORS_SUBFEATURE_POWER_LCRIT
   enum sensors_subfeature_type SENSORS_SUBFEATURE_POWER_MIN_ALARM
   enum sensors_subfeature_type SENSORS_SUBFEATURE_POWER_LCRIT_ALARM
+* Added bus type "scsi":
+  #define SENSORS_BUS_TYPE_SCSI
 
 0x440	lm-sensors 3.4.0
 * Defined SENSORS_FEATURE_MAX
