@@ -45,6 +45,7 @@
 #define SENSORS_BUS_TYPE_ACPI		5
 #define SENSORS_BUS_TYPE_HID		6
 #define SENSORS_BUS_TYPE_MDIO		7
+#define SENSORS_BUS_TYPE_SCSI		8
 #define SENSORS_BUS_NR_ANY		(-1)
 #define SENSORS_BUS_NR_IGNORE		(-2)
 
